# social-posts-analysis

./: .gitignore  LICENSE  PROJECT_ANALYSIS.ru.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: project.yaml
config/smoke/: telegram_mtproto_history.yaml
src/facebook_posts_analysis/: __init__.py  cli.py  config.py  contracts.py  normalize.py  paths.py  pipeline.py  raw_store.py  utils.py
src/facebook_posts_analysis/analysis/: __init__.py  clustering.py  language.py  metrics.py  providers.py  service.py  stance.py
src/facebook_posts_analysis/collectors/: base.py  meta_api.py  public_web.py
src/facebook_posts_analysis/reporting/: __init__.py  service.py
src/facebook_posts_analysis/templates/: report.html.j2  report.md.j2
src/social_posts_analysis/: cli.py  config.py  config_env.py  config_models.py  config_validation.py  contracts.py  normalize.py  openclaw.py  paths.py  person_monitoring.py  pipeline.py  propagation.py  utils.py
src/social_posts_analysis/analysis/: cache.py  service.py
src/social_posts_analysis/collectors/: facebook_web_content.py  facebook_web_extraction.py  facebook_web_interactions.py  facebook_web_timestamps.py  instagram_graph_api.py  instagram_web.py  meta_api.py  public_web.py  range_utils.py  telegram_bot_api.py  telegram_mtproto.py  telegram_web.py  threads_api.py  threads_web.py  value_utils.py  web_runtime.py  x_api.py  x_web.py
src/social_posts_analysis/normalization/: merge.py  persistence.py  records.py  schemas.py
src/social_posts_analysis/reporting/: exports.py  service.py  summaries.py
src/social_posts_analysis/templates/: report.md.j2
tests/: conftest.py  test_analysis_cache.py  test_analysis_helpers.py  test_cli.py  test_collectors.py  test_config.py  test_normalize.py  test_openclaw.py  test_paths.py  test_person_monitoring.py  test_pipeline.py  test_pipeline_fallback.py  test_propagation_pipeline.py  test_refactor_helpers.py  test_reporting_overrides.py  test_smoke_configs.py
tests/fixtures/raw_run/: manifest.json
