[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "facebook-posts-analysis"
version = "0.1.0"
description = "Local-first Python pipeline for collecting Facebook posts and comments, then analyzing narratives, stance, and support."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "OpenAI Codex" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "duckdb>=1.1.3,<2.0.0",
  "hdbscan>=0.8.39,<1.0.0",
  "httpx>=0.27.2,<1.0.0",
  "jinja2>=3.1.4,<4.0.0",
  "langdetect>=1.0.9,<2.0.0",
  "markdown>=3.7,<4.0.0",
  "numpy>=1.26.4,<3.0.0",
  "openpyxl>=3.1.5,<4.0.0",
  "playwright>=1.48.0,<2.0.0",
  "polars>=1.9.0,<2.0.0",
  "pydantic-settings>=2.6.1,<3.0.0",
  "pydantic>=2.9.2,<3.0.0",
  "pyyaml>=6.0.2,<7.0.0",
  "tenacity>=9.0.0,<10.0.0",
  "typer>=0.12.5,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13.0,<2.0.0",
  "pytest>=8.3.3,<9.0.0",
  "ruff>=0.8.6,<1.0.0",
  "types-Markdown>=3.7.0.20250415,<4.0.0",
  "types-PyYAML>=6.0.12.20240917,<7.0.0",
]

[project.scripts]
facebook-posts-analysis = "facebook_posts_analysis.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/facebook_posts_analysis"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008", "E501"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
warn_unused_ignores = true
ignore_missing_imports = true

